--- a/index.html
+++ b/index.html
@@ -15,40 +15,40 @@
             </a>
                 <ul id="navlist">
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/기본설정.html">기본설정</a>
+                    <a class="nav-link">기본설정</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">상품관리</a>
+                    <a class="nav-link">상품관리</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">회원관리</a>
+                    <a class="nav-link">회원관리</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">주문관리</a>
+                    <a class="nav-link">주문관리</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">프로모션</a>
+                    <a class="nav-link">프로모션</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">정산</a>
+                    <a class="nav-link">정산</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">통계</a>
+                    <a class="nav-link">통계</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">게시판관리</a>
+                    <a class="nav-link">게시판관리</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">디자인관리</a>
+                    <a class="nav-link">디자인관리</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Bizcard</a>
+                    <a class="nav-link">Bizcard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">단체주문</a>
+                    <a class="nav-link">단체주문</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Yellowkit</a>
+                    <a class="nav-link">Yellowkit</a>
                 </li>
             </ul>
         </nav>
